Data Transformation done

--- a/notebook/1. EDA STUDENT PERFORMANCE.ipynb
+++ b/notebook/1. EDA STUDENT PERFORMANCE.ipynb
@@ -1876,7 +1876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ML_PROJECT5.2env",
    "language": "python",
    "name": "python3"
   },
